Build/third-party-libraries/packages/nuget.org/microsoft.extensions.logging.abstractions/7.0.1/readme.md
Microsoft.Extensions.Logging.Abstractions [7.0.1](https://www.nuget.org/packages/Microsoft.Extensions.Logging.Abstractions/7.0.1)
--------------------

Used by: SqlDatabase

Target frameworks: netstandard2.0

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/dotnet/runtime) 
- project license: [Unknown](https://dot.net/) 

Description
-----------
Logging abstractions for Microsoft.Extensions.Logging.

Commonly Used Types:
Microsoft.Extensions.Logging.ILogger
Microsoft.Extensions.Logging.ILoggerFactory
Microsoft.Extensions.Logging.ILogger<TCategoryName>
Microsoft.Extensions.Logging.LogLevel
Microsoft.Extensions.Logging.Logger<T>
Microsoft.Extensions.Logging.LoggerMessage
Microsoft.Extensions.Logging.Abstractions.NullLogger

Remarks
-----------
no remarks


Dependencies 2
-----------

|Name|Version|
|----------|:----|
|[System.Buffers](../../../../packages/nuget.org/system.buffers/4.5.1)|4.5.1|
|[System.Memory](../../../../packages/nuget.org/system.memory/4.5.5)|4.5.5|

*This page was generated by a tool.*