Build/third-party-libraries/packages/nuget.org/microsoft.extensions.logging.abstractions/8.0.2/readme.md
Microsoft.Extensions.Logging.Abstractions [8.0.2](https://www.nuget.org/packages/Microsoft.Extensions.Logging.Abstractions/8.0.2)
--------------------

Used by: SqlDatabase

Target frameworks: netstandard2.0

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/dotnet/runtime) 
- project license: [Unknown](https://dot.net/) 

Description
-----------
Logging abstractions for Microsoft.Extensions.Logging.

Commonly Used Types:
Microsoft.Extensions.Logging.ILogger
Microsoft.Extensions.Logging.ILoggerFactory
Microsoft.Extensions.Logging.ILogger<TCategoryName>
Microsoft.Extensions.Logging.LogLevel
Microsoft.Extensions.Logging.Logger<T>
Microsoft.Extensions.Logging.LoggerMessage
Microsoft.Extensions.Logging.Abstractions.NullLogger

Dependencies 4
-----------

|Name|Version|
|----------|:----|
|[Microsoft.Extensions.DependencyInjection.Abstractions](../../../../packages/nuget.org/microsoft.extensions.dependencyinjection.abstractions/8.0.2)|8.0.2|
|[System.Buffers](../../../../packages/nuget.org/system.buffers/4.5.1)|4.5.1|
|[System.Diagnostics.DiagnosticSource](../../../../packages/nuget.org/system.diagnostics.diagnosticsource/8.0.1)|8.0.1|
|[System.Memory](../../../../packages/nuget.org/system.memory/4.5.5)|4.5.5|

*This page was generated by a tool.*